--- a/source/settings.json
+++ b/source/settings.json
@@ -668,7 +668,7 @@
     },
     {
       "variable": "pages_global_nav_dropdown_text",
-      "label": "Custom Pages menu dropdown text",
+      "label": "Custom pages menu dropdown text",
       "section": "global_navigation",
       "type": "text",
       "default": "More",
