--- a/source/settings.json
+++ b/source/settings.json
@@ -661,7 +661,7 @@
       "type": "text",
       "default": "Shop",
       "max_length": 25,
-      "description": "The label for your dropdown menu containing products and categories. Only applies when using dropdown style",
+      "description": "Label for your dropdown menu containing products and categories",
       "requires": [
         "nav_menu_style eq dropdown"
       ]
@@ -673,7 +673,7 @@
       "type": "text",
       "default": "More",
       "max_length": 25,
-      "description": "The label for your dropdown menu containing custom pages. Only applies when using dropdown style",
+      "description": "Label for your dropdown menu containing custom pages and contact",
       "requires": [
         "nav_menu_style eq dropdown"
       ]
@@ -690,7 +690,7 @@
         ["None", "none"]
       ],
       "default": "all",
-      "description": "Select which types of pages appear in your shop's header. Only applies when using inline menu style.",
+      "description": "Select which types of pages appear in your shop header",
       "requires": [
         "nav_menu_style eq inline"
       ]
@@ -702,7 +702,7 @@
       "type": "select",
       "options": "0..6",
       "default": 2,
-      "description": "Number of custom pages shown in your shop's header. Only applies when using inline menu style.",
+      "description": "Number of custom pages shown in your shop's header",
       "requires": [
         "nav_menu_style eq inline",
         "nav_page_display neq contact_only",
