fix: cart_text should have `max_length` set to 1024

--- a/source/settings.json
+++ b/source/settings.json
@@ -1286,6 +1286,7 @@
       "variable": "cart_text",
       "label": "Cart page text",
       "section": "messaging",
+      "max_length": 1024,
       "type": "text",
       "description": "Displays a message within your cart page"
     },
