--- a/source/settings.json
+++ b/source/settings.json
@@ -573,12 +573,12 @@
     },
     {
       "variable": "announcement_background_color",
-      "label": "Announcement background",
+      "label": "Announcement banner background",
       "default": "#FCEDE4"
     },
     {
       "variable": "announcement_text_color",
-      "label": "Announcement text",
+      "label": "Announcement banner text",
       "default": "#4E4E4E"
     },
     {
@@ -1313,7 +1313,7 @@
     },
     {
       "variable": "announcement_message_text",
-      "label": "Announcement text",
+      "label": "Announcement banner",
       "section": "messaging",
       "max_length": 500,
       "type": "textarea",
@@ -1321,7 +1321,7 @@
     },
     {
       "variable": "contact_text",
-      "label": "Contact page text",
+      "label": "Contact page",
       "section": "messaging",
       "type": "textarea",
       "max_length": 1024,
@@ -1329,7 +1329,7 @@
     },
     {
       "variable": "cart_text",
-      "label": "Cart page text",
+      "label": "Cart page",
       "section": "messaging",
       "max_length": 1024,
       "type": "textarea",
