--- a/source/settings.json
+++ b/source/settings.json
@@ -807,7 +807,7 @@
       "section": "global_navigation",
       "type": "textarea",
       "max_length": 2048,
-      "description": "Show a custom message in your shop's footer. Accepts HTML for links and styling."
+      "description": "Show a custom message in your shop's footer. Supports HTML for advanced customization."
     },
     {
       "variable": "footer_text_position",
@@ -980,6 +980,29 @@
       "description": "Sets a layout style for featured products on the Home page",
       "requires": [
         "featured_products gt 0"
+      ]
+    },
+    {
+      "variable": "homepage_featured_text",
+      "label": "Featured message",
+      "section": "homepage",
+      "max_length": 2048,
+      "type": "textarea",
+      "description": "Add a message on the homepage above the featured products. Supports HTML for advanced customization."
+    },
+    {
+      "variable": "homepage_featured_text_position",
+      "label": "Featured message position",
+      "section": "homepage",
+      "type": "select",
+      "options": [
+        ["Above featured section", "above"],
+        ["Within featured section", "within"]
+      ],
+      "default": "within",
+      "description": "Sets position of the featured message",
+      "requires": [
+        "homepage_featured_text present"
       ]
     },
     {
@@ -1267,7 +1290,7 @@
       "section": "messaging",
       "max_length": 500,
       "type": "textarea",
-      "description": "Displays an announcement message on the top of every page. Accepts HTML for links and styling."
+      "description": "Displays an announcement message on the top of every page. Supports HTML for advanced customization."
     },
     {
       "variable": "contact_text",
@@ -1275,7 +1298,7 @@
       "section": "messaging",
       "type": "textarea",
       "max_length": 1024,
-      "description": "Displays a message at the top of your contact page. Accepts HTML for links and styling."
+      "description": "Displays a message at the top of your contact page. Supports HTML for advanced customization."
     },
     {
       "variable": "cart_text",
@@ -1283,7 +1306,7 @@
       "section": "messaging",
       "max_length": 1024,
       "type": "textarea",
-      "description": "Displays a message at the top your cart page when there are items in the cart. Accepts HTML for links and styling."
+      "description": "Displays a message at the top your cart page when there are items in the cart. Supports HTML for advanced customization."
     },
     {
       "variable": "maintenance_message",
@@ -1291,7 +1314,7 @@
       "section": "messaging",
       "type": "textarea",
       "max_length": 2048,
-      "description": "A message visitors see when your shop is in Maintenance Mode. Accepts HTML for links and styling.",
+      "description": "A message visitors see when your shop is in Maintenance Mode. Supports HTML for advanced customization.",
       "default": "We're working on our shop right now.<br /><br />Please check back soon."
     },
     {
@@ -1597,11 +1620,11 @@
     },
     {
       "variable": "products_select_variant_tr_text",
-      "label": "'Select variant'",
+      "label": "'Select option'",
       "section": "translations",
       "sub_section": "products",
       "type": "text",
-      "default": "Select variant",
+      "default": "Select option",
       "description": "Text for product variant dropdowns and selections",
       "requires": [ "translation_mode eq manual" ]
     },
