--- a/source/settings.json
+++ b/source/settings.json
@@ -646,7 +646,7 @@
     },
     {
       "variable": "nav_menu_style",
-      "label": "Menu style to use in shop header",
+      "label": "Header menu style",
       "section": "global_navigation",
       "type": "select",
       "options": [
@@ -655,11 +655,11 @@
       ],
       "default": "dropdown",
       "upgrade_default": "inline",
-      "description": "Choose how to display shop header menu items"
+      "description": "Display navigation as a dropdown or inline"
     },
     {
       "variable": "nav_page_display",
-      "label": "Pages to show in your navigation",
+      "label": "Pages to show in your header",
       "section": "global_navigation",
       "type": "select",
       "options": [
@@ -669,21 +669,17 @@
         ["None", "none"]
       ],
       "default": "all",
-      "description": "Select which types of pages appear in your header and footer",
-      "requires": [
-        "nav_menu_style eq inline"
-      ]
+      "description": "Select which types of pages appear in your header"
     },
     {
       "variable": "nav_items",
-      "label": "Custom pages in header",
+      "label": "Custom page limit in header",
       "section": "global_navigation",
       "type": "select",
-      "options": "0..6",
-      "default": 2,
-      "description": "Number of custom pages shown in your shop's header",
+      "options": "0..100",
+      "default": 5,
+      "description": "Maximum number of custom pages shown in your header",
       "requires": [
-        "nav_menu_style eq inline",
         "nav_page_display neq contact_only",
         "nav_page_display neq none"
       ]
@@ -699,7 +695,7 @@
         ["Lowercase", "lowercase"]
       ],
       "default": "initial",
-      "description": "Controls the text case styling in your header"
+      "description": "Controls the text case styling in your main navigation"
     },
     {
       "variable": "nav_text_transform_footer",
@@ -799,20 +795,35 @@
       }
     },
     {
+      "variable": "nav_page_display_footer",
+      "label": "Pages to show in your footer",
+      "section": "global_navigation",
+      "type": "select",
+      "options": [
+        ["All pages", "all"],
+        ["Custom pages only", "pages_only"],
+        ["Contact page only", "contact_only"],
+        ["None", "none"]
+      ],
+      "default": "all",
+      "description": "Select which types of pages appear in your footer"
+    },
+    {
+      "variable": "nav_items_footer",
+      "label": "Custom page limit in footer",
+      "section": "global_navigation",
+      "type": "select",
+      "options": "0..100",
+      "default": 100,
+      "description": "Maximum number of custom pages shown in your footer"
+    },
+    {
       "variable": "show_categories_in_footer",
       "label": "Show categories in footer",
       "section": "global_navigation",
       "type": "boolean",
       "default": true,
       "description": "Display product category links in your footer"
-    },
-    {
-      "variable": "show_custom_pages_in_footer",
-      "label": "Show custom pages in footer",
-      "section": "global_navigation",
-      "type": "boolean",
-      "default": true,
-      "description": "Display links to your custom pages in your footer"
     },
     {
       "variable": "footer_text",
