--- a/source/settings.json
+++ b/source/settings.json
@@ -1688,6 +1688,26 @@
       "requires": [ "translation_mode eq manual" ]
     },
     {
+      "variable": "products_variant_tr_text",
+      "label": "'Option'",
+      "section": "translations",
+      "sub_section": "products",
+      "type": "text",
+      "default": "Option",
+      "description": "Text in some cases to reference the product variant (singular)",
+      "requires": [ "translation_mode eq manual" ]
+    },
+    {
+      "variable": "products_variants_tr_text",
+      "label": "'Options'",
+      "section": "translations",
+      "sub_section": "products",
+      "type": "text",
+      "default": "Options",
+      "description": "Text in some cases to reference product variants (plural)",
+      "requires": [ "translation_mode eq manual" ]
+    },
+    {
       "variable": "products_reset_tr_text",
       "label": "'Reset'",
       "section": "translations",
