--- a/source/settings.json
+++ b/source/settings.json
@@ -690,7 +690,7 @@
       "section": "global_navigation",
       "type": "select",
       "options": [
-        ["Default", "initial"],
+        ["Default (Sentence case)", "initial"],
         ["Uppercase", "uppercase"],
         ["Lowercase", "lowercase"]
       ],
@@ -703,7 +703,7 @@
       "section": "global_navigation",
       "type": "select",
       "options": [
-        ["Default", "initial"],
+        ["Default (Sentence case)", "initial"],
         ["Uppercase", "uppercase"],
         ["Lowercase", "lowercase"]
       ],
