fix: adjust approach for header logo sizing
- Fix flawed height-only srcset that caused identical 1x/2x URLs for wide logos
  - Add 6x width constraint multiplier to prevent bandwidth waste and support wide logos
  - Replace max-height CSS with direct height control for predictable logo scaling
  - Rename setting from logo_image_height to logo_image_size reflecting bounding box behavior
  - Conservative migration values [120→25, 240→35, 420→80] preserve visual consistency
  - Add mobile scaling factor (0.6x) for responsive logo sizing
  - Ensures consistent logo behavior across all device pixel ratios with DPI optimization

--- a/source/settings.json
+++ b/source/settings.json
@@ -629,20 +629,20 @@
   ],
   "options": [
     {
-      "variable": "logo_image_height",
-      "label": "Logo image height",
+      "variable": "logo_image_size",
+      "label": "Logo image size",
       "section": "global_navigation",
       "type": "select",
       "options": [
-        ["Extra small", "120"],
-        ["Small", "180"],
-        ["Medium", "240"],
-        ["Large", "300"],
-        ["Extra Large", "360"],
-        ["XX Large", "420"]
+        ["Extra small", "60"],
+        ["Small", "90"],
+        ["Medium", "120"],
+        ["Large", "150"],
+        ["Extra Large", "180"],
+        ["XX Large", "210"]
       ],
-      "default": "240",
-      "description": "Controls the maximum height of your logo"
+      "default": "120",
+      "description": "Controls the size of your logo"
     },
     {
       "variable": "nav_menu_style",
