--- a/source/settings.json
+++ b/source/settings.json
@@ -13,6 +13,12 @@
       "label": "Hero image",
       "section": "homepage",
       "description": "Minimum size of 1200 x 600px recommended."
+    },
+    {
+      "variable": "maintenance_image",
+      "label": "Maintenance mode image",
+      "section": "messaging",
+      "description": "Adds an image to your Maintenance page. Recommend an image at least 800px wide."
     }
   ],
   "image_sets": [
@@ -1376,6 +1382,23 @@
       }
     },
     {
+      "variable": "maintenance_message",
+      "label": "Maintenance mode message",
+      "section": "messaging",
+      "type": "textarea",
+      "max_length": 2048,
+      "description": "A message visitors see when your shop is in Maintenance Mode. Supports HTML for advanced customization.",
+      "default": "We’re getting things ready. Check back soon!"
+    },
+    {
+      "variable": "show_shop_name_on_maintenance_page",
+      "label": "Show shop name on Maintenance Mode page",
+      "section": "messaging",
+      "type": "boolean",
+      "default": true,
+      "description": "Display your shop name on the Maintenance Mode page. Turn this off if your maintenance image already includes your shop name to avoid duplication."
+    },
+    {
       "variable": "announcement_message_text",
       "label": "Announcement banner",
       "section": "messaging",
@@ -1406,15 +1429,6 @@
       "max_length": 1024,
       "type": "textarea",
       "description": "Displays a message at the top your cart page when there are items in the cart. Supports HTML for advanced customization."
-    },
-    {
-      "variable": "maintenance_message",
-      "label": "Maintenance mode message",
-      "section": "messaging",
-      "type": "textarea",
-      "max_length": 2048,
-      "description": "A message visitors see when your shop is in Maintenance Mode. Supports HTML for advanced customization.",
-      "default": "We’re getting things ready. Check back soon!"
     },
     {
       "variable": "translation_locale",
